# healthcare-data-lakehouse

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt
data/sample/: allergies.csv  conditions.csv  devices.csv  imaging_studies.csv  immunizations.csv  organizations.csv  supplies.csv
docker/airflow/: Dockerfile  requirements.txt
scripts/: inspect_parquet.py  test_bronze.py  test_minio.py  test_reader.py
scripts/minio/: create_bucket.sh
src/healthcare_data_lakehouse/ingestion/: bronze.py  config.py  readers.py
src/healthcare_data_lakehouse/storage/: minio_client.py
src/ingestion/: config.py
