[project]
name = "healthcare-data-lakehouse"
version = "0.1.0"
description = "Production-grade Healthcare Data Lakehouse Pipeline"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]