[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-data-lakehouse"
version = "0.1.0"
description = "Production-grade Healthcare Data Lakehouse Pipeline"
requires-python = ">=3.10,<3.12"

dependencies = [
    "pandas==2.1.4",
    "pyarrow==21.0.0",
    "duckdb==1.3.2",
    "duckdb-engine==0.17.0",
    "boto3==1.40.0",
    "minio==7.2.16",
    "great-expectations==1.5.11",
    "python-dotenv==1.2.2",
    "dbt-duckdb==1.9.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]